fix expandable card where the red and blue box are not wrapped properly

--- a/styles-mainpage.css
+++ b/styles-mainpage.css
@@ -13,7 +13,7 @@
 
 body {
     font-family: 'Montserrat', sans-serif;
-    background: white;
+    background: FFFFFF;
     min-width: 320px;
 }
 
